--- a/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
+++ b/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
@@ -7,7 +7,6 @@
       "provenance": [],
       "collapsed_sections": [
         "GF8Ens_Soomf",
-        "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
         "448CDAPjqfQr",
         "KSlN3yHqYklG",
@@ -58,12 +57,9 @@
         "E6MkPsBcp1cl",
         "2cELzS2fp1cl",
         "3MPXvC8up1cl",
-        "NC_X3p0fY2L0",
-        "UV0SzAkaZNRQ",
-        "YPEH6qLeZNRQ",
-        "q29F0dvdveiT",
         "EXh0U9oCveiU",
         "22aHeOlLveiV",
+        "JcMwzZxoAimU",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -369,7 +365,7 @@
       "cell_type": "code",
       "source": [
         "# Load Dataset\n",
-        "data = pd.read_csv(\"/content/Global_Terrorism_Data.csv\",encoding=('ISO-8859-1'),low_memory=False)"
+        "data = pd.read_csv(\"/content/drive/MyDrive/Capstone project-1-Global Terrorism Dataset Analysis/EDA/Global_Terrorism_Data.csv\",encoding=('ISO-8859-1'),low_memory=False)"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -483,7 +479,7 @@
       "cell_type": "code",
       "source": [
         "# Dataset Info\n",
-        "data.info"
+        "data.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
@@ -745,10 +741,114 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready.\n"
+        "# Write your code to make your dataset analysis ready.\n",
+        "# Columns having missing values.\n",
+        "data.isnull().sum().sort_values(ascending = False)[:70]\n"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the number of missing values for each column\n",
+        "missing_values = data.isnull().sum()\n",
+        "\n",
+        "# Sort columns by the number of missing values\n",
+        "sorted_columns = missing_values.sort_values(ascending=False)\n",
+        "\n",
+        "# Select the top 50 columns\n",
+        "top_50_columns = sorted_columns[:50].index.tolist()\n",
+        "\n",
+        "# Drop the selected columns from the dataset\n",
+        "df_dropped = data.drop(top_50_columns, axis=1)\n",
+        "\n",
+        "# Check the resulting dataset\n",
+        "print(df_dropped.head())"
+      ],
+      "metadata": {
+        "id": "9jvNZ5yoEkJg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# top 10 attck types \n",
+        "attcktypes = data['attacktype1_txt'].value_counts().head(10)\n",
+        "attcktypes"
+      ],
+      "metadata": {
+        "id": "_BHLmLRPSMqs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# top 10 types of weapons used\n",
+        "weaptype = data['weaptype1_txt'].value_counts().head(10)\n",
+        "weaptype"
+      ],
+      "metadata": {
+        "id": "35f-akSVTgX1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# top 10 terrorists groups\n",
+        "gangname= data['gname'].value_counts().head(10)\n",
+        "gangname\n"
+      ],
+      "metadata": {
+        "id": "hXAgEJYZUedN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# target institutions by Terrorists\n",
+        "targettype= data['targtype1_txt'].value_counts().head(10)\n",
+        "targettype\n"
+      ],
+      "metadata": {
+        "id": "sZCAuaEwYrDm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# counties affected the most\n",
+        "country_involved= data['natlty1_txt'].value_counts().head(10)\n",
+        "country_involved"
+      ],
+      "metadata": {
+        "id": "oysLSXv-Zfnp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# years of attcks\n",
+        "year_of_attack= data['year'].value_counts().head(10)\n",
+        "year_of_attack"
+      ],
+      "metadata": {
+        "id": "DrHqFbv_a8zL"
       },
       "execution_count": null,
       "outputs": []
@@ -765,7 +865,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "1. Dropping coloumns (There were many null values in columns of the dataset, so we have drooped top 50 columns with most number of null values).\n",
+        "2. Most of the attacks type was Bombing/Explosion. \n",
+        "3. Top weapon type used was Explosives.\n",
+        "4. Most of the terrorists groups invovled were unknown.\n",
+        "5. Mostly Business, Local Citizens & property and military were targeted.\n",
+        "6. El Salvador and United states were the top two most affected nations by Terrorism.\n",
+        "7. Most of the attcks were conducted in 1984.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
@@ -1923,19 +2033,7 @@
         "  and Police Forces.\n",
         "\n",
         "* Unclaimed attacks caused most of the casualties in terms of terror \n",
-        "  attacks.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "  attacks.\n"
       ],
       "metadata": {
         "id": "Fjb1IsQkh3yE"
