--- a/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
+++ b/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
@@ -6,30 +6,22 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "GF8Ens_Soomf",
-        "lQ7QKXXCp7Bj",
         "448CDAPjqfQr",
-        "KSlN3yHqYklG",
         "t6dVpIINYklI",
         "ijmpgYnKYklI",
         "-JiQyfWJYklI",
-        "EM7whBJCYoAo",
         "fge-S5ZAYoAp",
         "85gYPyotYoAp",
         "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
         "iky9q4vBYrdO",
         "F6T5p64dYrdO",
         "y-Ehk30pYrdP",
-        "bamQiAODYuh1",
         "QHF8YVU7Yuh3",
         "GwzvFGzlYuh3",
         "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
         "bbFf2-_FphqN",
         "_ouA3fa0phqN",
         "Seke61FWphqN",
-        "PIIx-8_IphqN",
         "t27r6nlMphqO",
         "r2jJGEOYphqO",
         "b0JNsNcRphqO",
@@ -535,7 +527,7 @@
       "cell_type": "code",
       "source": [
         "# Visualizing the missing values\n",
-        "plt.figure(figsize=(10, 6))\n",
+        "plt.figure(figsize=(20, 10))\n",
         "sns.heatmap(data.isnull(), cmap='YlOrRd') # cmap='YlOrRd': argument sets the color map\n",
         "plt.title('Missing Values Heatmap')\n",
         "plt.show()"
@@ -743,7 +735,7 @@
       "source": [
         "# Write your code to make your dataset analysis ready.\n",
         "# Columns having missing values.\n",
-        "data.isnull().sum().sort_values(ascending = False)[:70]\n"
+        "data.isnull().sum().sort_values(ascending = False)[:90]\n"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
@@ -891,6 +883,19 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Making a new dataset relevant columns from the main dataset\n",
+        "newdata1 = df_dropped[['year', 'month', 'country_txt', 'region_txt', 'attacktype1_txt', 'weaptype1_txt', 'targtype1_txt', 'targsubtype1_txt', 'natlty1_txt','gname', 'motive']]\n",
+        "list[newdata1.columns]"
+      ],
+      "metadata": {
+        "id": "ZHS8fQLb28xQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#### Chart - 1"
@@ -902,10 +907,24 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code"
+        "attacktype = newdata1['attacktype1_txt'].value_counts()[:7]\n",
+        "attacktype\n"
       ],
       "metadata": {
-        "id": "7v_ESjsspbW7"
+        "id": "6dpo3ui8ATJe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.subplot(1,1,1)\n",
+        "attacktype.plot.pie(x='Bombing/Explosion', y ='Assassination',autopct='%1.0f%%',textprops={'weight': 'regular'},figsize =(9,9),explode =[0.05]*7) \n",
+        "plt.title('Hotel type',fontweight=\"bold\", size=22)\n"
+      ],
+      "metadata": {
+        "id": "zIsnrxvA4Umy"
       },
       "execution_count": null,
       "outputs": []
@@ -977,7 +996,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 2 visualization code"
+        "# Chart - 2 visualization code\n",
+        "x_year = newdata1['year'].unique()\n",
+        "y_count_years = newdata1['year'].value_counts(dropna = False).sort_index()\n",
+        "plt.figure(figsize = (15,8))\n",
+        "sns.barplot(x = x_year,\n",
+        "           y = y_count_years,\n",
+        "           palette = 'rocket')\n",
+        "plt.xticks(rotation = 45)\n",
+        "plt.xlabel('Attack Year')\n",
+        "plt.ylabel('Number of Attacks each year')\n",
+        "plt.title('Total Attack')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "R4YgtaqtYklH"
@@ -1052,7 +1082,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 3 visualization code"
+        "# Chart - 3 visualization code\n",
+        "x_region = newdata1['region_txt'].unique()\n",
+        "y_count_region = newdata1['region_txt'].value_counts(dropna = False).sort_index()\n",
+        "plt.figure(figsize = (15,8))\n",
+        "sns.barplot(x = x_region,\n",
+        "           y = y_count_region,\n",
+        "           palette = 'bright')\n",
+        "plt.xticks(rotation = 35)\n",
+        "plt.xlabel('Attack Regions')\n",
+        "plt.ylabel('Number of Attacks on each Regions')\n",
+        "plt.title('Attacks By Region')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "t6GMdE67YoAp"
@@ -1127,7 +1168,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 4 visualization code"
+        "# Chart - 4 visualization code\n",
+        "plt.subplots(figsize=(15,6))\n",
+        "sns.barplot(x=newdata1['country_txt'].value_counts()[:15].index,\n",
+        "            y=newdata1['country_txt'].value_counts()[:15].values,\n",
+        "            palette=\"Blues_d\")\n",
+        "plt.title('Top Countries Affected')\n",
+        "plt.xlabel('Countries')\n",
+        "plt.ylabel('Attacks')\n",
+        "plt.xticks(rotation= 90)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "irlUoxc8YrdO"
@@ -1202,7 +1252,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 5 visualization code"
+        "newdata1.gname.value_counts()[0:15]"
+      ],
+      "metadata": {
+        "id": "b_FCeIuovaVf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 5 visualization code\n",
+        "plt.subplots(figsize=(15,6))\n",
+        "sns.barplot(x=newdata1['weaptype1_txt'].value_counts()[:7].index,\n",
+        "            y=newdata1['weaptype1_txt'].value_counts()[:7].values,\n",
+        "            palette=\"copper\")\n",
+        "plt.title('Most Used Weapons')\n",
+        "plt.xlabel('Weapons Type')\n",
+        "plt.ylabel('No of Attacks')\n",
+        "plt.xticks(rotation= 0)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "TIJwrbroYuh3"
@@ -1277,7 +1347,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 6 visualization code"
+        "# Chart - 6 visualization code\n",
+        "plt.subplots(figsize=(17,6))\n",
+        "sns.barplot(x=newdata1['gname'].value_counts()[1:15].index,\n",
+        "            y=newdata1['gname'].value_counts()[1:15].values,\n",
+        "            palette=\"magma\")\n",
+        "plt.title('Top Responsible Groups')\n",
+        "plt.xlabel('Terrorist Groups')\n",
+        "plt.ylabel('No of Attacks')\n",
+        "plt.xticks(rotation= 75)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "kuRf4wtuphqN"
@@ -1352,7 +1431,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 7 visualization code"
+        "# Chart - 7 visualization code\n",
+        "plt.subplots(figsize=(20,8))\n",
+        "sns.lineplot(x=newdata1['year'].value_counts().index,\n",
+        "            y=newdata1['year'].value_counts().values,)\n",
+        "plt.title('Year Wise Attack')\n",
+        "plt.xlabel('Year')\n",
+        "plt.ylabel('No of Attacks')\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "lqAIGUfyphqO"
@@ -1877,10 +1963,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Correlation Heatmap visualization code"
+        "list[df_dropped.columns]"
       ],
       "metadata": {
-        "id": "xyC9zolEZNRQ"
+        "id": "W43KgIEtlhOG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corr_mat = newdata1.corr()\n",
+        "f, ax = plt.subplots(figsize=(12, 7))\n",
+        "sns.heatmap(corr_mat,vmax=0.8,annot = True,fmt='.2f');\n"
+      ],
+      "metadata": {
+        "id": "wLdvbaTtpLBo"
       },
       "execution_count": null,
       "outputs": []
