--- a/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
+++ b/Global_Terrorism_Dataset_Analysis_EDA_PROJECT_.ipynb
@@ -6,6 +6,16 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
+        "vncDsAP0Gaoa",
+        "FJNUwmbgGyua",
+        "w6K7xa23Elo4",
+        "yQaldy8SH6Dl",
+        "mDgbUHAGgjLW",
+        "H0kj-8xxnORC",
+        "PBTbrJXOngz2",
+        "MSa1f5Uengrz",
+        "K5QZ13OEpz2H",
+        "lQ7QKXXCp7Bj",
         "448CDAPjqfQr",
         "t6dVpIINYklI",
         "ijmpgYnKYklI",
@@ -25,19 +35,15 @@
         "t27r6nlMphqO",
         "r2jJGEOYphqO",
         "b0JNsNcRphqO",
-        "BZR9WyysphqO",
         "jj7wYXLtphqO",
         "eZrbJ2SmphqO",
         "rFu4xreNphqO",
-        "YJ55k-q6phqO",
         "gCFgpxoyphqP",
         "OVtJsKN_phqQ",
         "lssrdh5qphqQ",
-        "U2RJ9gkRphqQ",
         "1M8mcRywphqQ",
         "tgIPom80phqQ",
         "JMzcOPDDphqR",
-        "x-EpHcCOp1ci",
         "X_VqEhTip1ck",
         "8zGJKyg5p1ck",
         "PVzmfK_Ep1ck",
@@ -49,6 +55,8 @@
         "E6MkPsBcp1cl",
         "2cELzS2fp1cl",
         "3MPXvC8up1cl",
+        "UV0SzAkaZNRQ",
+        "YPEH6qLeZNRQ",
         "EXh0U9oCveiU",
         "22aHeOlLveiV",
         "JcMwzZxoAimU",
@@ -904,7 +912,7 @@
       "cell_type": "code",
       "source": [
         "# Making a new dataset relevant columns from the main dataset\n",
-        "newdata1 = df_dropped[['year', 'month', 'country_txt', 'region_txt', 'attacktype1_txt', 'weaptype1_txt', 'targtype1_txt', 'targsubtype1_txt', 'natlty1_txt','gname', 'motive']]\n",
+        "newdata1 = data[['year', 'month', 'country_txt', 'region_txt', 'attacktype1_txt', 'weaptype1_txt', 'targtype1_txt', 'natlty1_txt','gname', 'motive']]\n",
         "list[newdata1.columns]"
       ],
       "metadata": {
@@ -925,6 +933,18 @@
     {
       "cell_type": "code",
       "source": [
+        "natlty = newdata1['natlty1_txt'].value_counts()[:10]\n",
+        "natlty"
+      ],
+      "metadata": {
+        "id": "y0qu-mz3ZTKN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "attacktype = newdata1['attacktype1_txt'].value_counts()[:7]\n",
         "attacktype\n"
       ],
@@ -939,7 +959,7 @@
       "source": [
         "plt.subplot(1,1,1)\n",
         "attacktype.plot.pie(x='Bombing/Explosion', y ='Assassination',autopct='%1.0f%%',textprops={'weight': 'regular'},figsize =(9,9),explode =[0.05]*7) \n",
-        "plt.title('Hotel type',fontweight=\"bold\", size=22)\n"
+        "plt.title('Attack Type',fontweight=\"bold\", size=22)\n"
       ],
       "metadata": {
         "id": "zIsnrxvA4Umy"
@@ -1020,7 +1040,7 @@
         "plt.figure(figsize = (15,8))\n",
         "sns.barplot(x = x_year,\n",
         "           y = y_count_years,\n",
-        "           palette = 'rocket')\n",
+        "           palette = 'flare')\n",
         "plt.xticks(rotation = 45)\n",
         "plt.xlabel('Attack Year')\n",
         "plt.ylabel('Number of Attacks each year')\n",
@@ -1530,8 +1550,21 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6PykpG2_6Daj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "# Chart - 8 visualization code"
+        "# Chart - 8 visualization code\n",
+        "pd.crosstab(newdata1.year, newdata1.region_txt).plot(kind='area',colormap='Set1',figsize=(15,6))\n",
+        "plt.title('Terrorist Activities by Region in each Year')\n",
+        "plt.ylabel('Number of Attacks')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "TdPTWpAVphqO"
@@ -1606,7 +1639,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 9 visualization code"
+        "month = newdata1['month'].value_counts()[:12]\n",
+        "month"
+      ],
+      "metadata": {
+        "id": "EF6b9BiWHt4m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 9 visualization code\n",
+        "plt.subplots(figsize=(17,7))\n",
+        "sns.barplot(x=newdata1['month'].value_counts().index,\n",
+        "            y=newdata1['month'].value_counts().values,\n",
+        "            palette=\"husl\")\n",
+        "plt.title('Monthwise Attacks')\n",
+        "plt.xlabel('Months')\n",
+        "plt.ylabel('No of Attacks')\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "B2aS4O1ophqO"
@@ -1681,7 +1734,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 10 visualization code"
+        "# Chart - 10 visualization code\n",
+        "plt.subplots(figsize=(17,7))\n",
+        "sns.barplot(x=newdata1['targtype1_txt'].value_counts()[:10].index,\n",
+        "            y=newdata1['targtype1_txt'].value_counts()[:10].values,\n",
+        "            palette=\"Paired\")\n",
+        "plt.title('Targeted Attacks')\n",
+        "plt.xlabel('Targeted Institutions')\n",
+        "plt.ylabel('No of Attacks')\n",
+        "plt.xticks(rotation= 15)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "GM7a4YP4phqQ"
@@ -1756,7 +1818,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 11 visualization code"
+        "# Chart - 11 visualization code\n",
+        "plt.subplots(figsize=(17,7))\n",
+        "sns.barplot(x=newdata1['natlty1_txt'].value_counts()[:10].index,\n",
+        "            y=newdata1['natlty1_txt'].value_counts()[:10].values,\n",
+        "            palette=\"viridis\")\n",
+        "plt.title('Attackers Nationality')\n",
+        "plt.xlabel('Attackers Nationality')\n",
+        "plt.ylabel('No of Attacks')\n",
+        "#plt.xticks(rotation= 30)\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "mAQTIvtqp1cj"
@@ -1981,7 +2052,7 @@
     {
       "cell_type": "code",
       "source": [
-        "list[df_dropped.columns]"
+        "#list[df_dropped.columns]"
       ],
       "metadata": {
         "id": "W43KgIEtlhOG"
@@ -2050,7 +2121,36 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pair Plot visualization code"
+        "attack_year = newdata1.year.value_counts()\n",
+        "attack_year"
+      ],
+      "metadata": {
+        "id": "Q68nxGKE_Tmn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.pairplot(\n",
+        "    newdata1,\n",
+        "    x_vars=['region_txt'],\n",
+        "    y_vars=['year'])"
+      ],
+      "metadata": {
+        "id": "0tWCRDaE7KBt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pair Plot visualization code\n",
+        "sns.pairplot(attack_year, hue=\"year\", diag_kind=\"hist\")\n",
+        "# sns.pairplot(newdata1)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "o58-TEIhveiU"
